--- a/BlurMaker/Info.plist
+++ b/BlurMaker/Info.plist
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>LSApplicationQueriesSchemes</key>
-        <array>
-            <string>weixin</string>
-            <string>wechat</string>
-            <string>weibosdk</string>
-            <string>mqqapi</string>
-            <string>itms-beta</string>
-            <string>mqq</string>
-            <string>taobao</string>
-            <string>weixinULAPI</string>
-        </array>
-        <key>LSRequiresIPhoneOS</key>
-        <true/>
-        <key>NSAppTransportSecurity</key>
-        <dict>
-            <key>NSAllowsArbitraryLoads</key>
-            <true/>
-        </dict>
-        <key>NSCameraUsageDescription</key>
-        <string>请允许使用相机拍摄照片，使用相机拍摄的图片玩拼图游戏～</string>
-        <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-        <string>允许获取您的地理位置信息便于获取最新消息</string>
-        <key>NSLocationAlwaysUsageDescription</key>
-        <string>允许获取您的地理位置信息便于获取最新消息</string>
-        <key>NSLocationUsageDescription</key>
-        <string>允许获取您的地理位置信息便于获取最新消息</string>
-        <key>NSLocationWhenInUseUsageDescription</key>
-        <string>使用您的位置信息便于获取最新消息</string>
-        <key>NSMicrophoneUsageDescription</key>
-        <string>请允许使用您的麦克风进行语音识别</string>
-        <key>NSPhotoLibraryAddUsageDescription</key>
-        <string>请允许使用相册，使用相册自定义图片玩拼图游戏～</string>
-        <key>NSPhotoLibraryUsageDescription</key>
-        <string>请允许使用相册，使用相册自定义图片玩拼图游戏～</string>
-        <key>SKAdNetworkItems</key>
-        <array>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>f7s53z58qe.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>238da6jt44.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>x2jnk7ly8j.skadnetwork</string>
-            </dict>
-            <dict>
-                <key>SKAdNetworkIdentifier</key>
-                <string>22mmun2rn5.skadnetwork</string>
-            </dict>
-        </array>
-        <key>UIUserInterfaceStyle</key>
-        <string>Light</string>
-    </dict>
+<dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>weixin</string>
+		<string>wechat</string>
+		<string>weibosdk</string>
+		<string>mqqapi</string>
+		<string>itms-beta</string>
+		<string>mqq</string>
+		<string>taobao</string>
+		<string>weixinULAPI</string>
+	</array>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>请允许使用相机拍摄照片，使用相册自定义图片添加Blur～</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>允许获取您的地理位置信息便于获取最新消息</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>允许获取您的地理位置信息便于获取最新消息</string>
+	<key>NSLocationUsageDescription</key>
+	<string>允许获取您的地理位置信息便于获取最新消息</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用您的位置信息便于获取最新消息</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请允许使用您的麦克风进行语音识别</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>请允许使用相册，使用相册自定义图片添加Blur～</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许使用相册，使用相册自定义图片添加Blur～</string>
+	<key>SKAdNetworkItems</key>
+	<array>
+		<dict>
+			<key>SKAdNetworkIdentifier</key>
+			<string>f7s53z58qe.skadnetwork</string>
+		</dict>
+		<dict>
+			<key>SKAdNetworkIdentifier</key>
+			<string>238da6jt44.skadnetwork</string>
+		</dict>
+		<dict>
+			<key>SKAdNetworkIdentifier</key>
+			<string>x2jnk7ly8j.skadnetwork</string>
+		</dict>
+		<dict>
+			<key>SKAdNetworkIdentifier</key>
+			<string>22mmun2rn5.skadnetwork</string>
+		</dict>
+	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+</dict>
 </plist>
